--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/medium-editor": "^5.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
